Mobile layout bugfixes

--- a/src/theme/mobile.scss
+++ b/src/theme/mobile.scss
@@ -107,7 +107,7 @@ $mobile-width: 1024px;
     }
   }
 
-  .list-container, .full-page {
+  .ref {
     .info, .actions {
       height: 0;
 
